<resources>
    <string name="app_name">Usandodb</string>
    <string name="cod">Cod:</string>
    <string name="nome">Nome:</string>
    <string name="codigo">Código</string>
    <string name="telefone">Telefone:</string>
    <string name="incluir">Incluir</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="listar">Listar</string>

</resources>